Sync all content

--- a/content/resources/52.md
+++ b/content/resources/52.md
@@ -1,12 +1,16 @@
 ---
 content_type: resource
 description: ''
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/21g-504-japanese-iv-spring-2020/552bf65e29326d4e8c372813ebd84fde_52.png
+file: /media/courses/21g-504-japanese-iv-spring-2020/552bf65e29326d4e8c372813ebd84fde_52.png
 file_type: image/png
 image_metadata:
   caption: ''
   credit: ''
   image-alt: ''
+learning_resource_types: []
+ocw_type: OCWImage
+parent_title: Instructor Insights
+parent_type: ThisCourseAtMITSection
 resourcetype: Image
 title: 52.png
 uid: 552bf65e-2932-6d4e-8c37-2813ebd84fde
