--- a/content/resources/52.md
+++ b/content/resources/52.md
@@ -11,6 +11,7 @@ learning_resource_types: []
 ocw_type: OCWImage
 parent_title: Instructor Insights
 parent_type: ThisCourseAtMITSection
+parent_uid: 651a8dea-013c-4de9-be6d-0fe53ac965e7
 resourcetype: Image
 title: 52.png
 uid: 552bf65e-2932-6d4e-8c37-2813ebd84fde
