Sync all content

--- a/content/resources/21g504s20.md
+++ b/content/resources/21g504s20.md
@@ -12,6 +12,7 @@ image_metadata:
   image-alt: A giant robot standing tall holding a saber in his hand with a purple
     sunset sky and pink clouds as the background.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 21g504s20.jpg
