--- a/content/resources/21g504s20-th.md
+++ b/content/resources/21g504s20-th.md
@@ -2,12 +2,13 @@
 content_type: resource
 description: ''
 file: /courses/21g-504-japanese-iv-spring-2020/79fa975ec67aaea2bb9af84c012d59d0_21g504s20-th.jpg
+file_size: 16936
 file_type: image/jpeg
 image_metadata:
   caption: "A statue of the 18-meter-tall giant robot, Gundam (\u30AC\u30F3\u30C0\u30E0\
     ) from the popular Japanese TV series _Mobile Suit Gundam_ was erected at the\
-    \ Shizuoka Hobby Fair in Japan. (Image courtesy of [easegui](https://www.flickr.com/photos/easegui/6001070272/)\
-    \ on Flickr. License: CC BY-NC-SA.)"
+    \ Shizuoka Hobby Fair in Japan. (Image courtesy of {{% resource_link \"29f5de0b-0816-48a0-99e4-8f424932eaa1\"\
+    \ \"easegui\" %}} on Flickr. License: CC BY-NC-SA.)"
   credit: ''
   image-alt: A giant robot standing tall holding a saber in his hand with a purple
     sunset sky and pink clouds as the background.
