--- a/content/resources/52.md
+++ b/content/resources/52.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/21g-504-japanese-iv-spring-2020/552bf65e29326d4e8c372813ebd84fde_52.png
+file_size: 6224
 file_type: image/png
 image_metadata:
   caption: ''
